# KVALD

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  _tmp_verify_config.json  check_cuda.py  commit_message.txt  compile.sh  compile_opencv_test.sh  config.json  config_flare7k_ft.json  dataset_factory.py  design.md  dummy_manifest.json  kalman_filter.py  model.py  production.py  real_data.py  test_opencv  test_opencv.cpp  train.py  training_metrics.csv  verify_performance.py
data/: synthetic_data.json
docs/: Architecture.md  Python_to_C++_Conversion_Plan.md  README.md
include/kvald/: data_loader.h  kalman_filter.h  model.h  proof_of_concept.h  synthetic_data.h  trainer.h
prototypes/: TODO.md  config.json  data.py  kalman_filter.py  model.py  proof_of_concept.py  requirements.txt  synthetic_data.py  train.py  verify_performance.py
prototypes/tests/: test_proof_of_concept.py
src/: CMakeLists.txt  main.cpp
src/kvald/: data_loader.cpp  kalman_filter.cpp  model.cpp  proof_of_concept.cpp  synthetic_data.cpp  trainer.cpp
tests/: CMakeLists.txt
tests/kvald/: CMakeLists.txt  test_data_loader.cpp  test_kalman_filter.cpp
